# python-project-template

./: .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  README.md  cookiecutter.json  poetry.toml  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_python_project_template.py
{{ cookiecutter.project_name }}/: .flake8  .pre-commit-config.yaml  .prettierrc.yaml  AUTHORS.md  pyproject.toml
{{ cookiecutter.project_name }}/tests/: conftest.py
