[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = "A template for Python projects using Poetry."
authors = ["Telmooo <telmoabaptista@hotmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cookies = "^0.7.0"
pre-commit = "^3.3.3"
mypy = "^1.3.0"

[tool.isort]
py_version = 311
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
show_column_numbers = true
show_error_codes = true
strict = true
warn_unreachable = true
exclude = [
    "^{{ cookiecutter.* }}/__init__.py$",
]

[[tool.mypy.overrides]]
module = [
    "pytest_cookies.*"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
