[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_name }}"
packages = [{include =  "{{ cookiecutter.package_name }}", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
{%- if cookiecutter.command_line_interface == "click" %}
click = "^8.1.3"
{%- endif %}

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.2"
mypy = "^1.3.0"

[tool.isort]
py_version = 311
atomic = true
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["{{ cookiecutter.package_name }}"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
show_column_numbers = true
show_error_codes = true
strict = true
warn_unreachable = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
